--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
-"<!DOCTYPE html><html lang='ar'><head><meta charset='UTF-8'><title>?????</title></head><body><h1>?????? ??!</h1></body></html>" 
 <!DOCTYPE html>
 <html lang="ar">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>موقعي الأول</title>
+    <title>صفحتي الدينية</title>
 </head>
 <body>
-    <h1>مرحبًا بك في موقعي!</h1>
-    <p>هذه أول صفحة HTML لي.</p>
+    <h1>مرحبًا بكم في صفحتي!</h1>
+    <p>هذه صفحة تحتوي على معلومات دينية.</p>
 </body>
 </html>
