--- a/islamic.html
+++ b/islamic.html
@@ -3,56 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>الصفحة الإسلامية</title>
+    <title>صفحة دينية</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
             text-align: center;
-            padding: 20px;
-            direction: rtl;
-        }
-        h1 {
-            color: #2c3e50;
-        }
-        p {
-            font-size: 18px;
-            color: #555;
+            background-color: #f4f4f4;
+            padding: 50px;
         }
         .ayah {
-            font-size: 20px;
-            color: #27ae60;
-            font-weight: bold;
-            margin: 20px 0;
-        }
-        .back-link {
-            display: block;
-            margin-top: 20px;
-            text-decoration: none;
-            color: #2980b9;
-            font-size: 18px;
-        }
-        .back-link:hover {
-            text-decoration: underline;
+            font-size: 24px;
+            color: #008000;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 10px;
+            display: inline-block;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
         }
     </style>
 </head>
 <body>
-
-    <h1>مرحبًا بكم في الصفحة الإسلامية</h1>
-    <p>هذه الصفحة تحتوي على بعض المعلومات الإسلامية المهمة.</p>
-
     <div class="ayah">
-        قال الله تعالى: <br>
-        <q>إِنَّ مَعَ الْعُسْرِ يُسْرًا</q> (الشرح: 6)
+        <p>إِنَّ اللَّهَ لَا يُضِيعُ أَجْرَ مَنْ أَحْسَنَ عَمَلًا</p>
+        <p>(الكهف: 30)</p>
     </div>
-
-    <div class="ayah">
-        قال رسول الله ﷺ: <br>
-        <q>إِنَّمَا الأَعْمَالُ بِالنِّيَّاتِ</q>
-    </div>
-
-    <a href="index.html" class="back-link">العودة إلى الصفحة الرئيسية</a>
-
 </body>
 </html>
