--- a/islamic.html
+++ b/islamic.html
@@ -10,6 +10,7 @@
             text-align: center;
             background-color: #f4f4f4;
             padding: 50px;
+            direction: rtl;
         }
         .ayah {
             font-size: 24px;
@@ -23,6 +24,9 @@
     </style>
 </head>
 <body>
+    <h1>مرحبًا بكم في صفحتي</h1>
+    <p>هذه صفحة تحتوي على معلومات دينية</p>
+    
     <div class="ayah">
         <p>إِنَّ اللَّهَ لَا يُضِيعُ أَجْرَ مَنْ أَحْسَنَ عَمَلًا</p>
         <p>(الكهف: 30)</p>
