--- a/islamic.html
+++ b/islamic.html
@@ -6,23 +6,36 @@
     <title>صفحة دينية</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            text-align: center;
+            font-family: 'Arial', sans-serif;
             background-color: #f4f4f4;
+            text-align: center;
             padding: 50px;
+            direction: rtl;
+        }
+        h1 {
+            color: #444;
+        }
+        p {
+            font-size: 18px;
+            color: #666;
         }
         .ayah {
             font-size: 24px;
+            font-weight: bold;
             color: #008000;
             background-color: #fff;
             padding: 20px;
             border-radius: 10px;
             display: inline-block;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+            border: 2px solid #008000;
         }
     </style>
 </head>
 <body>
+    <h1>مرحبًا بكم في صفحتي الدينية</h1>
+    <p>هذه صفحة تحتوي على معلومات دينية مفيدة</p>
+
     <div class="ayah">
         <p>إِنَّ اللَّهَ لَا يُضِيعُ أَجْرَ مَنْ أَحْسَنَ عَمَلًا</p>
         <p>(الكهف: 30)</p>
