--- a/index.html
+++ b/index.html
@@ -3,49 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>سورة الملك</title>
+    <title>صفحة دينية</title>
     <style>
         body {
-            font-family: 'Traditional Arabic', Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
             background-color: #f4f4f4;
             text-align: center;
-            padding: 20px;
+            padding: 50px;
             direction: rtl;
         }
         h1 {
-            color: #004080;
-            font-size: 36px;
+            color: #444;
+        }
+        p {
+            font-size: 18px;
+            color: #666;
         }
         .ayah {
-            font-size: 22px;
-            color: #222;
+            font-size: 24px;
+            font-weight: bold;
+            color: #008000;
             background-color: #fff;
             padding: 20px;
-            margin: 20px auto;
             border-radius: 10px;
             display: inline-block;
-            text-align: justify;
-            width: 80%;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-            line-height: 2;
-        }
-        .ayah span {
-            color: #008000;
-            font-weight: bold;
+            border: 2px solid #008000;
         }
     </style>
 </head>
 <body>
-    <h1>سورة الملك</h1>
+    <h1>مرحبًا بكم في صفحتي الدينية</h1>
+    <p>هذه صفحة تحتوي على معلومات دينية مفيدة</p>
+
     <div class="ayah">
-        <p>
-            تَبَارَكَ الَّذِي بِيَدِهِ الْمُلْكُ وَهُوَ عَلَى كُلِّ شَيْءٍ قَدِيرٌ <span>(1)</span>  
-            الَّذِي خَلَقَ الْمَوْتَ وَالْحَيَاةَ لِيَبْلُوَكُمْ أَيُّكُمْ أَحْسَنُ عَمَلًا وَهُوَ الْعَزِيزُ الْغَفُورُ <span>(2)</span>  
-            الَّذِي خَلَقَ سَبْعَ سَمَاوَاتٍ طِبَاقًا مَا تَرَىٰ فِي خَلْقِ الرَّحْمَٰنِ مِنْ تَفَاوُتٍ فَارْجِعِ الْبَصَرَ هَلْ تَرَىٰ مِنْ فُطُورٍ <span>(3)</span>  
-            ثُمَّ ارْجِعِ الْبَصَرَ كَرَّتَيْنِ يَنْقَلِبْ إِلَيْكَ الْبَصَرُ خَاسِئًا وَهُوَ حَسِيرٌ <span>(4)</span>  
-            <br><br>
-            **(أكمل باقي السورة بنفس التنسيق حسب الحاجة)**
-        </p>
+        <p>إِنَّ اللَّهَ لَا يُضِيعُ أَجْرَ مَنْ أَحْسَنَ عَمَلًا</p>
+        <p>(الكهف: 30)</p>
     </div>
 </body>
 </html>
