--- a/index.html
+++ b/index.html
@@ -3,42 +3,82 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>صفحة دينية</title>
+    <title>سورة الملك</title>
     <style>
         body {
-            font-family: 'Arial', sans-serif;
+            font-family: 'Traditional Arabic', Arial, sans-serif;
             background-color: #f4f4f4;
             text-align: center;
-            padding: 50px;
+            padding: 20px;
             direction: rtl;
         }
         h1 {
-            color: #444;
+            color: #004080;
+            font-size: 36px;
+            margin-bottom: 20px;
         }
-        p {
-            font-size: 18px;
-            color: #666;
-        }
-        .ayah {
+        .moving-text {
             font-size: 24px;
             font-weight: bold;
-            color: #008000;
+            color: #d9534f;
+            background-color: #fff;
+            padding: 10px;
+            border-radius: 5px;
+            width: 100%;
+            white-space: nowrap;
+            overflow: hidden;
+            position: relative;
+        }
+        .moving-text span {
+            position: absolute;
+            width: 100%;
+            display: inline-block;
+            animation: moveText 10s linear infinite;
+        }
+        @keyframes moveText {
+            from { transform: translateX(100%); }
+            to { transform: translateX(-100%); }
+        }
+        .ayah {
+            font-size: 22px;
+            color: #222;
             background-color: #fff;
             padding: 20px;
+            margin: 20px auto;
             border-radius: 10px;
             display: inline-block;
+            text-align: justify;
+            width: 80%;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-            border: 2px solid #008000;
+            line-height: 2;
+        }
+        .ayah span {
+            color: #008000;
+            font-weight: bold;
         }
     </style>
 </head>
 <body>
-    <h1>مرحبًا بكم في صفحتي الدينية</h1>
-    <p>هذه صفحة تحتوي على معلومات دينية مفيدة</p>
+
+    <h1>سورة الملك</h1>
+
+    <div class="moving-text">
+        <span>✨ فضل سورة الملك: تنجي من عذاب القبر وتشفع لصاحبها يوم القيامة ✨</span>
+    </div>
 
     <div class="ayah">
-        <p>إِنَّ اللَّهَ لَا يُضِيعُ أَجْرَ مَنْ أَحْسَنَ عَمَلًا</p>
-        <p>(الكهف: 30)</p>
+        <p>
+            تَبَارَكَ الَّذِي بِيَدِهِ الْمُلْكُ وَهُوَ عَلَى كُلِّ شَيْءٍ قَدِيرٌ <span>(1)</span><br>
+            الَّذِي خَلَقَ الْمَوْتَ وَالْحَيَاةَ لِيَبْلُوَكُمْ أَيُّكُمْ أَحْسَنُ عَمَلًا وَهُوَ الْعَزِيزُ الْغَفُورُ <span>(2)</span><br>
+            الَّذِي خَلَقَ سَبْعَ سَمَاوَاتٍ طِبَاقًا مَا تَرَىٰ فِي خَلْقِ الرَّحْمَٰنِ مِنْ تَفَاوُتٍ فَارْجِعِ الْبَصَرَ هَلْ تَرَىٰ مِنْ فُطُورٍ <span>(3)</span><br>
+            ثُمَّ ارْجِعِ الْبَصَرَ كَرَّتَيْنِ يَنْقَلِبْ إِلَيْكَ الْبَصَرُ خَاسِئًا وَهُوَ حَسِيرٌ <span>(4)</span><br>
+            وَلَقَدْ زَيَّنَّا السَّمَاءَ الدُّنْيَا بِمَصَابِيحَ وَجَعَلْنَاهَا رُجُومًا لِّلشَّيَاطِينِ وَأَعْتَدْنَا لَهُمْ عَذَابَ السَّعِيرِ <span>(5)</span><br>
+            وَلِلَّذِينَ كَفَرُوا بِرَبِّهِمْ عَذَابُ جَهَنَّمَ وَبِئْسَ الْمَصِيرُ <span>(6)</span><br>
+            إِذَا أُلْقُوا فِيهَا سَمِعُوا لَهَا شَهِيقًا وَهِيَ تَفُورُ <span>(7)</span><br>
+            <br>
+            <strong>(أكمل باقي الآيات هنا بنفس النمط حتى نهاية السورة)</strong>
+        </p>
     </div>
+
 </body>
 </html>
